--- a/print.html
+++ b/print.html
@@ -192,7 +192,7 @@ Also, IOTA full-nodes are able to prune history from time to time in a safe way.
 <ol>
 <li>Ensure <code>docker</code> and <code>docker-compose</code> are installed.</li>
 <li>Download the latest release of <code>rosetta-iota</code> and extract the files in a folder of your choice.</li>
-<li>Add your HORNET peers (to which your HORNET node should connect) to following configuration file: <code>hornet/peering.json</code>. If you don't have any peers, please contact us and we will help you.</li>
+<li>Add your HORNET peers (to which your HORNET node should connect) to following configuration file: <code>hornet/peering_testnet.json</code>. If you don't have any peers, please contact us and we will help you.</li>
 <li>Run the implementation in the desired mode:</li>
 </ol>
 <p><strong>Testnet: online mode</strong></p>
