--- a/pages/testing_cli.html
+++ b/pages/testing_cli.html
@@ -177,8 +177,7 @@
 </code></pre>
 </li>
 <li>
-<p>Ensure the IOTA node is running and an instance of the Rosetta API is available.
-Also ensure that the REST API of the IOTA is available at http://localhost:14265/api/v1/info.</p>
+<p>Ensure the IOTA node is running and an instance of the Rosetta API is available.</p>
 <p>To validate the correctness of <code>rosetta-iota</code> run the commands below:</p>
 <p>Testing the Data API <strong>(testnet)</strong>:</p>
 <pre><code>INSTALL=1 BOOTSTRAP_BALANCES=1 ./check_data_testnet.sh
