--- a/print.html
+++ b/print.html
@@ -219,8 +219,7 @@ In addition, IOTA full-nodes are able to prune history from time to time in a sa
 </code></pre>
 </li>
 <li>
-<p>Ensure the IOTA node is running and an instance of the Rosetta API is available.
-Also ensure that the REST API of the IOTA is available at http://localhost:14265/api/v1/info.</p>
+<p>Ensure the IOTA node is running and an instance of the Rosetta API is available.</p>
 <p>To validate the correctness of <code>rosetta-iota</code> run the commands below:</p>
 <p>Testing the Data API <strong>(testnet)</strong>:</p>
 <pre><code>INSTALL=1 BOOTSTRAP_BALANCES=1 ./check_data_testnet.sh
