--- a/print.html
+++ b/print.html
@@ -192,19 +192,19 @@ In addition, IOTA full-nodes are able to prune history from time to time in a sa
 <ol>
 <li>Ensure <code>docker</code> and <code>docker-compose</code> are installed.</li>
 <li>Download the latest release of <code>rosetta-iota</code> and extract the files in a folder of your choice.</li>
-<li>Add your peer(s) - to which your HORNET node should connect. For <code>chrysalis-mainnet</code>, add the peers to the <code>hornet/chrysalis-mainnet/peering_.json</code> file. For <code>testnet7</code>, add the peers to the <code>hornet/mainnet/peering_.json</code> file. If you don't have any peers, please contact us and we will help you find some.</li>
+<li>Add your peer(s) - to which your HORNET node should connect. For <code>chrysalis-mainnet</code>, add the peers to the <code>hornet/chrysalis-mainnet/peering_.json</code> file. For <code>testnet7</code>, add the peers to the <code>hornet/testnet7/peering_.json</code> file. If you don't have any peers, please contact us and we will help you find some.</li>
 <li>Run the implementation in the desired mode:</li>
 </ol>
-<p><strong><code>chrysalis-mainnet: online mode</code></strong></p>
+<p><strong>chrysalis-mainnet: online mode</strong></p>
 <pre><code>MODE=online TX_TAG=Rosetta docker-compose -f docker-compose.chrysalis-mainnet.yml up
 </code></pre>
-<p><strong><code>chrysalis-mainnet: offline mode</code></strong></p>
+<p><strong>chrysalis-mainnet: offline mode</strong></p>
 <pre><code>MODE=offline TX_TAG=Rosetta docker-compose -f docker-compose.chrysalis-mainnet.yml up
 </code></pre>
-<p><strong><code>testnet7: online mode</code></strong></p>
+<p><strong>testnet7: online mode</strong></p>
 <pre><code>MODE=online TX_TAG=Rosetta docker-compose -f docker-compose.testnet7.yml up
 </code></pre>
-<p><strong><code>testnet7: offline mode</code></strong></p>
+<p><strong>testnet7: offline mode</strong></p>
 <pre><code>MODE=offline TX_TAG=Rosetta docker-compose -f docker-compose.testnet7.yml up
 </code></pre>
 <p>Once the HORNET node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
