deploy: 646e6df27947ce9c4916080a7d70c70fcf70c57c

--- a/pages/explorer_faucet.html
+++ b/pages/explorer_faucet.html
@@ -172,10 +172,10 @@
 <ul>
 <li>https://explorer.iota.org/chrysalis</li>
 </ul>
-<p>To fund an address you can use: </p>
+<p>To fund an address for <code>testnet7</code> you can use: </p>
 <ul>
-<li>https://faucet.testnet.chrysalis2.com</li>
 <li>https://faucet.tanglekit.de</li>
+<li>https://faucet.testnet.chrysalis2.com</li>
 </ul>
 
                     </main>
