deploy: 936a182bd9473c271c9afb1e9738ee1db04638a8

--- a/pages/testing_cli.html
+++ b/pages/testing_cli.html
@@ -169,7 +169,7 @@
                     <main>
                         <h1 id="testing-with-rosetta-cli"><a class="header" href="#testing-with-rosetta-cli">Testing with rosetta-cli</a></h1>
 <h2 id="testing-on-testnet"><a class="header" href="#testing-on-testnet">Testing on testnet</a></h2>
-<p>The provided scripts <code>check_data_testnet.sh</code> and <code>check_construction_testnet.sh</code> build on top of rosetta-cli. They help with bootstrapping rosetta-cli and make sure that rosetta-cli is runs with the correct configuration values.</p>
+<p>The provided scripts <code>check_data.sh</code> and <code>check_construction.sh</code> build on top of rosetta-cli. They help with bootstrapping rosetta-cli and make sure that rosetta-cli runs with the correct configuration values.</p>
 <ol>
 <li>
 <p>To be able to run the testing scripts, make sure you have <strong>the latest version of <a href="https://www.rust-lang.org/tools/install">Rust</a> installed.</strong> <strong>Also make sure <a href="https://wiki.ubuntuusers.de/jq/">jq</a> is installed.</strong></p>
