--- a/print.html
+++ b/print.html
@@ -277,6 +277,8 @@ The health status of the HORNET node can be checked at: http://localhost:14265/a
 <li><code>NO_BOOTSTRAP=1</code> ...keeps the rosetta-cli database and continues synching from the available state</li>
 <li><code>NETWORK</code> = ...the network that should be tested on; can be either <code>chrysalis-mainnet</code> or <code>testnet7</code></li>
 </ul>
+<h2 id="further-notes-1"><a class="header" href="#further-notes-1">Further notes:</a></h2>
+<p><strong>It seems like the rosetta-cli construction check sometimes just keeps printing <code>waiting for implementation to reach tip before testing…</code> and doesn't want to start. However, restarting the construction check fixes the issue. Sometimes it needs multiple tries. Unfortunately we couldn't find the cause for this issue yet.</strong></p>
 <h1 id="testing-with-curl"><a class="header" href="#testing-with-curl">Testing with curl</a></h1>
 <p>Curl commands can be used for manual inspection of each API endpoint.</p>
 <ol>
