deploy: e6ddaba4611af4708bb9cffa64710c0a2d014aa6

--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="welcome-to-the-documentation-for-rosetta-iota--"><a class="header" href="#welcome-to-the-documentation-for-rosetta-iota--">Welcome to the documentation for rosetta-iota  📖</a></h1>
+                        <h1 id="welcome-to-the-rosetta-iota-documentation-"><a class="header" href="#welcome-to-the-rosetta-iota-documentation-">Welcome to the <code>rosetta-iota</code> documentation 📖</a></h1>
 <h2 id="overview"><a class="header" href="#overview">Overview</a></h2>
-<p><code>rosetta-iota</code> implements the Rosetta API for IOTA in Rust. If you haven't heard of the Rosetta API, you can find more information <a href="https://www.rosetta-api.org/">here</a>.</p>
+<p><code>rosetta-iota</code> implements the Rosetta API for IOTA in Rust. If you haven't heard of the Rosetta API, you can find more information <a href="https://www.rosetta-api.org">here</a>.</p>
+<p><strong>This documentation is <code>rosetta-iota</code> specific.</strong> If you would like to learn more about the Rosetta API in general, please visit the following documentation:
+<a href="https://www.rosetta-api.org/docs/welcome.html">General Rosetta API Documentation</a></p>
 <h2 id="why-rosetta-iota-"><a class="header" href="#why-rosetta-iota-">Why <code>rosetta-iota</code> ?</a></h2>
 <ul>
 <li><a href="https://www.rosetta-api.org/docs/data_api_introduction.html">Data API</a> to access blocks, transactions, and balances in a standard format</li>
