deploy: 7a1ba87bc3f284b203d74ac9a3bef111fc9875a8

--- a/print.html
+++ b/print.html
@@ -145,6 +145,7 @@
 <a href="https://www.rosetta-api.org/docs/welcome.html">General Rosetta API Documentation</a></p>
 <h2 id="why-rosetta-iota-"><a class="header" href="#why-rosetta-iota-">Why <code>rosetta-iota</code> ?</a></h2>
 <ul>
+<li><strong>Automatically</strong> starts a pre-configured IOTA full-node</li>
 <li><a href="https://www.rosetta-api.org/docs/data_api_introduction.html">Data API</a> to access blocks, transactions, and balances in a standard format</li>
 <li><a href="https://www.rosetta-api.org/docs/construction_api_introduction.html">Construction API</a> to create curve-based transactions with standardized operations in an offline execution environment</li>
 <li>Stateless</li>
