--- a/pages/deployment.html
+++ b/pages/deployment.html
@@ -177,7 +177,7 @@ mkdir -p data/p2pstore &amp;&amp; chown 65532:65532 data/p2pstore
      &quot;alias&quot;: &quot;Alice&quot;
    },
    {
-     &quot;multiAddress&quot;: &quot;/dns/121.56.12.23/tcp/15600/p2p/12D3KooWRNYKZXYqZngxQee5BefmzcW5Zk6Tc6iE92U2uZwArHw9&quot;,
+     &quot;multiAddress&quot;: &quot;/ip4/121.56.12.23/tcp/15600/p2p/12D3KooWRNYKZXYqZngxQee5BefmzcW5Zk6Tc6iE92U2uZwArHw9&quot;,
      &quot;alias&quot;: &quot;Bob&quot;
    }
  ]
@@ -205,14 +205,15 @@ mkdir -p data/p2pstore &amp;&amp; chown 65532:65532 data/p2pstore
 You can back up your node ID by preserving the <code>data/p2pstore</code> directory.</p>
 </li>
 </ol>
-<p>Once the HORNET node has synced with the network, the Rosetta API will be available at: http://127.0.0.1:3030
-The health status of the HORNET node can be checked at: http://127.0.0.1:14265/api/v1/info</p>
+<p>Once the HORNET node has synced with the network, the Rosetta API will be available at:
+http://127.0.0.1:3030</p>
+<p>The health status of the HORNET node can be checked at: http://127.0.0.1:14265/api/v1/info</p>
 <h4 id="environment-variables"><a class="header" href="#environment-variables">Environment variables:</a></h4>
 <ul>
-<li><code>MODE</code> ... the mode in which the implementation is to run. Can be either <code>offline</code> or <code>online</code>.</li>
+<li><code>MODE</code> ... the mode in which the implementation is to run; can be either <code>offline</code> or <code>online</code></li>
 </ul>
 <h2 id="further-notes"><a class="header" href="#further-notes">Further notes:</a></h2>
-<p>The HORNET node will be bootstrapped automatically with recent snapshots to start synchronizing from a more recent block. <strong>For <code>chrysalis-mainnet</code>, the snapshots will be automatically downloaded from https://chrysalis-dbfiles.iota.org. For <code>chrysalis-devnet</code>, the snapshots will be automatically downloaded from http://dbfiles.chrysalis-devnet.iota.cafe. If you want to bootstrap the HORNET node yourself, you can do so by placing your snapshots appropriately in the <code>data/snapshots</code> directory.</strong></p>
+<p>The HORNET node will be bootstrapped automatically with recent snapshots to start synchronizing from a more recent block. For <code>chrysalis-mainnet</code>, the snapshots will be automatically downloaded from https://chrysalis-dbfiles.iota.org. For <code>chrysalis-devnet</code>, the snapshots will be automatically downloaded from http://dbfiles.chrysalis-devnet.iota.cafe. If you want to bootstrap the HORNET node yourself, you can do so by placing your snapshots appropriately in the <code>data/snapshots</code> directory.</p>
 
                     </main>
 
