--- a/print.html
+++ b/print.html
@@ -155,10 +155,8 @@
 <p><code>rosetta-iota</code> is released under the Apache License 2.0.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="deployment"><a class="header" href="#deployment">Deployment</a></h1>
 <h2 id="about-iota-nodes"><a class="header" href="#about-iota-nodes">About IOTA nodes</a></h2>
-<p><strong>IOTA full-nodes</strong> (such as <a href="https://github.com/gohornet/hornet">HORNET</a> and <a href="https://github.com/iotaledger/bee">Bee</a>) are able to start up from a more recent block instead of having to synchronize from genesis. This is made possible by booting the IOTA full-node with recent <a href="https://github.com/luca-moser/protocol-rfcs/blob/local-snapshot-file-format/text/0000-local-snapshot-file-format/0000-local-snapshot-file-format.md">snapshots</a>. 
-Also, by default, IOTA full-nodes prune history from time to time in a safe way - basically similar to nodes in the Bitcoin network that are running in pruning mode.</p>
-<p>In contrast, <strong>IOTA Permanodes</strong> (such as <a href="https://github.com/iotaledger/chronicle.rs">Chronicle</a>) are optimized for storing IOTA history which dates back further and provide special tools for querying data.</p>
-<p><code>rosetta-iota</code> aims for a more reliable integration and better performance with limiting state storage. Therefore, <strong>the Rosetta API implementation is delivered with an IOTA full-node</strong> (<a href="https://github.com/gohornet/hornet.git">HORNET</a>).</p>
+<p><strong>IOTA full-nodes</strong> (such as <a href="https://github.com/gohornet/hornet">HORNET</a>) are able to start up from a more recent block instead of having to synchronize from genesis. This is made possible by booting the IOTA full-node with recent <a href="https://github.com/luca-moser/protocol-rfcs/blob/local-snapshot-file-format/text/0000-local-snapshot-file-format/0000-local-snapshot-file-format.md">snapshots</a>.</p>
+<p>Furthermore, IOTA full-nodes implement the <a href="https://www.rosetta-api.org/docs/storage_pruning.html">Storage Pruning</a> feature. Per default, they prune history from time to time in a safe way - similar to the nodes in the Bitcoin network that run in pruning mode.</p>
 <h2 id="instructions"><a class="header" href="#instructions">Instructions</a></h2>
 <p><strong>Following instructions will start a HORNET node together with a Rosetta API instance:</strong></p>
 <ol>
@@ -199,35 +197,27 @@ mkdir -p data/p2pstore &amp;&amp; chown 65532:65532 data/p2pstore
  ]
 }
 </code></pre>
-<p>Also, make sure that your peers know the multiaddress of your HORNET node so that they will be able to mutually tether. A multiaddress - as illustrated above - consists of the <strong>address where you deploy the implementation and the node ID</strong>. You can find your node ID in the HORNET logs when you run the implementation.</p>
+<p>Also, make sure that your peers know the multiaddress of your HORNET node so that they will be able to mutually tether. A multiaddress - as illustrated above - consists of the <strong>internet address and the node ID</strong>. You can find your node ID in the HORNET logs when you run the implementation.</p>
 </li>
 <li>
-<p>Run the implementation in the desired mode:</p>
-<p><strong>chrysalis-mainnet: online mode</strong></p>
+<p>Run the implementation for the desired network and specify the mode in which the implementation should run; can be either <code>offline</code> or <code>online</code>:</p>
+<p><strong>chrysalis-mainnet</strong></p>
 <pre><code>MODE=online docker-compose -f docker-compose.chrysalis-mainnet.yml up
 </code></pre>
-<p><strong>chrysalis-mainnet: offline mode</strong></p>
-<pre><code>MODE=offline docker-compose -f docker-compose.chrysalis-mainnet.yml up
-</code></pre>
-<p><strong>chrysalis-devnet: online mode</strong></p>
+<p><strong>chrysalis-devnet</strong></p>
 <pre><code>MODE=online docker-compose -f docker-compose.chrysalis-devnet.yml up
-</code></pre>
-<p><strong>chrysalis-devnet: offline mode</strong></p>
-<pre><code>MODE=offline docker-compose -f docker-compose.chrysalis-devnet.yml up
 </code></pre>
 </li>
 <li>
-<p>If you want to reuse the node ID of your HORNET node with a later deployment (<strong>see step 4.</strong>) make sure you back up the private and public key files that make up your node ID. Otherwise, you cannot preserve the same node ID for subsequent deployments. 
-You can back up your node ID by preserving the <code>data/p2pstore</code> directory.</p>
+<p>If you want to use your node ID of your HORNET node with a later deployment (<strong>see step 4.</strong>) make sure you back up the <code>data/p2pstore</code> directory. Otherwise, you cannot preserve the same node ID for subsequent deployments. </p>
+</li>
+<li>
+<p>Your node will now try to synchronize with its peers. You can check the health status of your HORNET node at: http://127.0.0.1:14265/api/v1/info</p>
+</li>
+<li>
+<p>Congratulations! Once the HORNET node is healthy, the Rosetta API will be available at port <a href="pages/">3030</a>.</p>
 </li>
 </ol>
-<p>Once the HORNET node has synced with the network, the Rosetta API will be available at:
-http://127.0.0.1:3030</p>
-<p>The health status of the HORNET node can be checked at: http://127.0.0.1:14265/api/v1/info</p>
-<h4 id="environment-variables"><a class="header" href="#environment-variables">Environment variables:</a></h4>
-<ul>
-<li><code>MODE</code> ... the mode in which the implementation is to run; can be either <code>offline</code> or <code>online</code></li>
-</ul>
 <h2 id="further-notes"><a class="header" href="#further-notes">Further notes:</a></h2>
 <p>The HORNET node will be bootstrapped automatically with recent snapshots to start synchronizing from a more recent block. For <code>chrysalis-mainnet</code>, the snapshots will be automatically downloaded from https://chrysalis-dbfiles.iota.org. For <code>chrysalis-devnet</code>, the snapshots will be automatically downloaded from http://dbfiles.chrysalis-devnet.iota.cafe. If you want to bootstrap the HORNET node yourself, you can do so by placing your snapshots appropriately in the <code>data/snapshots</code> directory.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="testing-with-rosetta-cli"><a class="header" href="#testing-with-rosetta-cli">Testing with rosetta-cli</a></h1>
